--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -112,7 +112,6 @@
     font-family: var(--font-content);
     height: 100%;
     margin: auto;
-    overflow-y: auto;
     padding: 1rem 15%;
     width: 100%;
 }
